Fixed screen aspect ratio on mobiles.

--- a/contact/contact.css
+++ b/contact/contact.css
@@ -143,6 +143,18 @@ p {
 }
 
 @media only screen and (width: 320px) {
+    h1 {
+        margin-top: 2rem;
+    }
+}
+
+@media only screen and (width: 360px) {
+    h1 {
+        margin-top: 2rem;
+    }
+}
+
+@media only screen and (width: 320px) {
     form {
         margin-bottom: 1rem;
         position: block;
@@ -157,7 +169,7 @@ p {
     }
 }
 @media only screen and (width: 360px) {
-    h1, contact-form {
+    contact-form {
         margin-top: 30px;
     }
 }
